--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="container-fluid">
+<div class="container-fluid" style="height:100%;border:1px solid darkred;position:fixed;width:100%">
   <alert></alert>
   <router-outlet></router-outlet>
-  <app-footer></app-footer>
+  <app-footer #footer></app-footer>
 </div>
 
 
