--- a/src/app/portal/campaigns/campaign-details/campaign-content/campaign-content.component.html
+++ b/src/app/portal/campaigns/campaign-details/campaign-content/campaign-content.component.html
@@ -1,7 +1,7 @@
 <p *ngIf="selectedTab.tab=='Companies'">
-  Companies-content works!
+  Companies-content for Order Id={{orderId}}
 </p>
 
 <p *ngIf="selectedTab.tab=='Contacts'">
-  Contacts-content works!
+  Contacts-content for Order Id={{orderId}}
 </p>
