--- a/src/app/common/footer/footer.component.css
+++ b/src/app/common/footer/footer.component.css
@@ -1,7 +1,8 @@
 .page-footer{
-    position: fixed;
-    bottom: 10px;
-    align: center;
+    position: absolute;
+    bottom: 0px;
     text-align: center;
-    left: 40%;
+    height:50px;
+    border:1px solid green;
+    width:100%;
 }
