--- a/src/app/common/nav-bar/nav-bar.component.html
+++ b/src/app/common/nav-bar/nav-bar.component.html
@@ -19,7 +19,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Insights</a>
+        <a class="nav-link search" (click)="showSearch()">Search</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Pricing</a>
